# opus-engine

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md  old_shader.wgsl  shell.nix
game/: register.cpp
game/scripts/: bounce_script.hpp  rotate_script.hpp
include/opus/: opus.hpp
include/opus/asset/: bitmap.hpp  obj_model.hpp
include/opus/ecs/: ecs.hpp
include/opus/editor/: editor.hpp
include/opus/gfx/: gfx.hpp
include/opus/gfx/core/: feature_set.hpp  frame_buffer.hpp  mesh.hpp  render_backend.hpp  render_command.hpp  render_pipeline.hpp  renderer_context.hpp  shader_program.hpp  texture2d.hpp  vbuffer.hpp  vertex_layout.hpp
include/opus/gfx/core/commands/: bind_framebuffer_cmd.hpp  bind_texture_cmd.hpp  clear_cmd.hpp  draw_mesh_cmd.hpp  set_uniform_cmd.hpp  set_viewport_cmd.hpp  unbind_framebuffer_cmd.hpp  use_shader_cmd.hpp
include/opus/gfx/opengl/: opengl_context.hpp  opengl_pipeline.hpp  opengl_shader.hpp  opengl_vbuffer.hpp
include/opus/gfx/opengl/commands/: draw_mesh_cmd.hpp  set_uniform_cmd.hpp
include/opus/math/: mat4.hpp  math.hpp  matrix3x3.hpp  matrix4x4.hpp  quat.hpp  quaternion.hpp  vec3.hpp  vec4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/opus/scene/: camera.hpp  camera3d.hpp  debug_grid.hpp  deferred_gbuffer.frag  deferred_gbuffer.vert  deferred_light.frag  deferred_renderer.hpp  directional_light3d.hpp  entity_name.hpp  forward.frag  forward_plus.frag  forward_plus.vert  fullscreen.vert  light_grid.hpp  lighting.hpp  material.hpp  mesh_instance.hpp  mesh_instance3d.hpp  obj.hpp  point_light3d.hpp  renderer.hpp  scene.hpp  screen_effects.frag  script_ref.hpp  shadow_map.hpp  spot_light3d.hpp  ssao.frag  ssao.hpp  ssao_blur.frag  ssao_gbuffer.frag  ssao_gbuffer.vert  tonemap.frag  tonemap.hpp  transform.hpp  transform3d.hpp  world.hpp
include/opus/scene3d/: camera.hpp  deferred_renderer.hpp  forward_renderer.hpp  light.hpp  material.hpp  mesh_instance.hpp  scene3d.hpp  texture.hpp  transform.hpp
include/opus/scripting/: game_api.h  script.hpp  script_runtime.hpp
include/opus/syswin/: window.hpp
samples/: CMakeLists.txt
samples/forward_renderer/: CMakeLists.txt
samples/forward_renderer/resources/shaders/: compute_shader.wgsl  forward_renderer.wgsl
samples/forward_renderer/src/: main.cpp
src/: main.cpp  sokol_imgui_impl.cpp  sokol_impl.cpp
tests/: CMakeLists.txt
tests/dawn-test/: main.cpp
tests/gfx/: opengl-test.cpp
